--- a/src/index.scss
+++ b/src/index.scss
@@ -1,19 +1,11 @@
-* {
-    padding: 0;
-    margin: 0;
-    border: none;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-  }
-  
-  a, a:link, a:visited  {
-    text-decoration: none;
-  }
-  
-  a:hover  {
-    text-decoration: none;
-  }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import "styles/_reset.scss";
+@import "styles/_font.scss";
+
+body {
+  @apply flex justify-center items-center bg-slate-200;
+  width: 100vw;
+  height: 100vh;
+}
