--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,12 @@
 main {
-    @apply bg-stone-200 w-full;
+  @apply p-4;
+  background-color: rgba(231, 229, 228, 0.664);
+  width: calc(100vw - 30rem);
+  min-width: 500px;
+  max-width: 800px;
 
-
-    h1 {
-        @apply text-center text-7xl;
-        color: rgba(165, 42, 42, 0.199);
-    }
+  h1 {
+    @apply text-center text-7xl py-4;
+    color: rgba(165, 42, 42, 0.199);
+  }
 }
