--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -1,7 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;1,100&display=swap");
-
+@font-face {
+  font-family: "Montserrat";
+  src: url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;1,100&display=swap") format("truetype");
+}
 body {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
+  font-family: "Montserrat";
   font-style: normal;
+  font-weight: 100;
 }
