--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -1,9 +1,8 @@
-@font-face {
-  font-family: "Montserrat";
-  src: url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;1,100&display=swap") format("truetype");
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 body {
-  font-family: "Montserrat";
-  font-style: normal;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
   font-weight: 100;
+  font-style: normal;
 }
