--- a/src/index.scss
+++ b/src/index.scss
@@ -5,10 +5,8 @@
 @import "styles/_font.scss";
 
 body {
-  @apply flex justify-center bg-gray-50;
-  position: relative;
+  @apply flex justify-center bg-gray-50 relative;
   width: 100vw;
   height: 100vh;
   padding-top: 10rem;
-  color: black;
 }
