--- a/src/components/components.module.scss
+++ b/src/components/components.module.scss
@@ -66,7 +66,7 @@
 
   .taskComplete {
     text-decoration: line-through;
-    opacity: .6;
+    opacity: 0.6;
   }
 }
 
@@ -77,12 +77,14 @@
     @apply flex justify-between p-4 h-9 items-center;
 
     div > button {
-      @apply m-3 p-1;
+      @apply m-3;
       border: 1px solid transparent;
+      padding: 3px;
     }
 
-    div > button:hover {
-      border: 1px solid dimgray;
+    div > button:hover,
+    div > .active {
+      border: 1px solid rgba(105, 105, 105, 4);
     }
   }
 }
