--- a/src/App.scss
+++ b/src/App.scss
@@ -2,12 +2,13 @@ main {
   @apply p-4 flex flex-col;
   background-color: rgba(231, 229, 228, 0.664);
   max-height: 80vh;
-  width: calc(100vw - 30rem);
+  width: 30%;
   min-width: 500px;
   max-width: 800px;
 
   h1 {
     @apply text-center text-7xl py-4;
     color: rgba(165, 42, 42, 0.199);
+    font-weight: lighter;
   }
 }
