--- a/src/components/components.module.scss
+++ b/src/components/components.module.scss
@@ -1,6 +1,8 @@
 .taskInput {
   @apply py-4 bg-white w-full relative flex;
   border-bottom: 1px solid rgba(104, 104, 104, 0.39);
+  box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  z-index: 10;
 
   input {
     @apply w-full;
@@ -28,6 +30,8 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  z-index: 20;
 
   ul {
     @apply overflow-y-auto;
@@ -93,26 +97,28 @@
 }
 
 .taskListControl {
-  @apply flex justify-between p-4 h-9 items-center mt-1;
+  @apply flex justify-between p-4 h-9 items-center text-xs text-stone-500 bg-white;
+  font-weight: 400;
+  border-top: 1px solid rgba(128, 128, 128, 0.144);
+  box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  z-index: 30;
 
   div > button {
-    @apply m-3;
+    @apply my-3 mx-1;
     border: 1px solid transparent;
     padding: 3px;
   }
 
   div > button:hover,
   div > .active {
-    border: 1px solid rgba(105, 105, 105, 4);
+    border: 1px solid rgba(133, 34, 34, 0.203);
+    border-radius: 3px;
   }
 }
 
 @media (max-width: 1050px) {
-  
-
-    .taskListControl {
-      height: 10rem;
-      flex-direction: column;
-    }
+  .taskListControl {
+    height: 10rem;
+    flex-direction: column;
   }
-
+}
