--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,8 @@
 main {
   @apply p-4 flex flex-col;
   background-color: rgba(231, 229, 228, 0.664);
-  max-height: 80vh;
-  width: 30%;
-  min-width: 500px;
-  max-width: 800px;
+  width: 30vw;
+  max-height: 83vh;
 
   h1 {
     @apply text-center text-7xl py-4;
