--- a/src/components/components.module.scss
+++ b/src/components/components.module.scss
@@ -97,11 +97,16 @@
 }
 
 .taskListControl {
-  @apply flex justify-between p-4 h-9 items-center text-xs text-stone-500 bg-white;
+  @apply grid items-center text-xs text-stone-500 bg-white px-4 z-30;
+  grid-template-columns: 20% 50% 30%;
   font-weight: 400;
   border-top: 1px solid rgba(128, 128, 128, 0.144);
   box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
-  z-index: 30;
+
+  div {
+    display: flex;
+    justify-content: center;
+  }
 
   div > button {
     @apply my-3 mx-1;
