--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,31 @@
 main {
-  @apply p-4 flex flex-col;
+  @apply p-4 flex flex-col relative;
   background-color: rgba(231, 229, 228, 0.664);
   width: 30vw;
   max-height: 83vh;
 
   h1 {
-    @apply text-center text-7xl py-4;
+    @apply text-center text-7xl pb-4;
     color: rgba(165, 42, 42, 0.199);
     font-weight: lighter;
+  }
+
+  #upperLayout {
+    @apply absolute z-20 bg-stone-100 self-center;
+    height: 4px;
+    width: calc(100% - 2.5rem);
+    bottom: calc(1rem - 4px);
+    box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.4);
+    opacity: 0.9;
+  }
+
+  #lowerLayout {
+    @apply absolute z-10 bg-stone-100 self-center;
+    height: 4px;
+    width: calc(100% - 2.7rem);
+    position: absolute;
+    bottom: calc(1rem - 8px);
+    box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.3);
+    opacity: 0.8;
   }
 }
