--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
 @import "styles/_scroll.scss";
 
 body {
-  @apply flex justify-center bg-gray-50 my-20 relative;
+  @apply flex justify-center bg-gray-50 my-20;
   width: 100vw;
   height: 80vh;
   color: black;
