--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 main {
   @apply p-4 flex flex-col relative;
-  background-color: rgba(231, 229, 228, 0.664);
+  background-color: rgba(231, 229, 228, 0.464);
   width: 30vw;
   max-height: 83vh;
 
@@ -14,6 +14,7 @@ main {
     @apply absolute z-20 bg-stone-100 self-center;
     height: 4px;
     width: calc(100% - 2.5rem);
+    // min-width: 300px;
     bottom: calc(1rem - 4px);
     box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.4);
     opacity: 0.9;
