--- a/src/components/components.module.scss
+++ b/src/components/components.module.scss
@@ -1,14 +1,10 @@
 .taskInput {
-  @apply py-4 bg-white w-full relative flex;
+  @apply py-4 bg-white w-full relative flex z-10;
   border-bottom: 1px solid rgba(104, 104, 104, 0.39);
   box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
-  z-index: 10;
 
   input {
-    @apply w-full;
-    outline: none;
-    overflow-wrap: break-word;
-    word-break: break-all;
+    @apply w-full outline-none break-words break-all;
   }
 
   input::-webkit-input-placeholder {
@@ -27,25 +23,17 @@
 }
 
 .taskList {
-  @apply bg-white flex-grow;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
+  @apply bg-white flex flex-col flex-grow overflow-hidden z-20;
   box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
-  z-index: 20;
 
   ul {
-    @apply overflow-y-auto;
+    @apply overflow-y-auto p-0 m-0 list-none;
     max-height: 70vh;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
 
     li {
-      @apply flex items-center py-3;
+      @apply flex items-center py-3 break-words break-all;
       border-bottom: 1px solid rgba(128, 128, 128, 0.144);
-      overflow-wrap: break-word;
-      word-break: break-all;
+
       span {
         @apply pr-2;
       }
@@ -60,7 +48,6 @@
 
       .checkbox {
         @apply inline-block relative;
-        display: inline-block;
         width: 20px;
         height: 20px;
         border-radius: 50%;
@@ -73,7 +60,7 @@
       }
 
       input[type="checkbox"]:checked + .checkbox {
-        background-color: white;
+        @apply bg-white;
         border-color: #777;
       }
 
@@ -90,7 +77,7 @@
       }
 
       .taskComplete {
-        text-decoration: line-through;
+        @apply line-through;
         opacity: 0.6;
       }
     }
@@ -105,12 +92,11 @@
   box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
 
   div {
-    display: flex;
-    justify-content: center;
+    @apply flex justify-center;
   }
 
   div > button {
-    @apply my-3 mx-1;
+    @apply my-3 mx-1 ;
     border: 1px solid transparent;
     padding: 3px;
   }
@@ -121,9 +107,36 @@
     border-radius: 3px;
   }
 }
-@media (max-width: 1050px) {
+
+@media (max-width: 1250px) {
   .taskListControl {
-    height: 10rem;
-    flex-direction: column;
+    @apply flex h-28 flex-col justify-around w-full text-center;
   }
 }
+
+@media (max-width: 1400px) {
+  .taskListControl {
+    @apply text-center;
+  }
+}
+
+@media (max-width: 1000px) {
+  input {
+    @apply w-full outline-none;
+  }
+
+  input::-webkit-input-placeholder {
+    opacity: 0.8;
+    font-style: italic;
+  }
+
+  button {
+    @apply px-4;
+  }
+
+  button > img {
+    width: 20px;
+    opacity: 0.7;
+  }
+}
+
